ambassador/tests/004-tls-without-ambassador-module/gold.intermediate.json
{
    "envoy_config": {
        "admin": [
            {
                "_source": "--internal--",
                "admin_port": 8001
            }
        ],
        "clusters": [
            {
                "_referenced_by": [
                    "--internal--"
                ],
                "_service": "127.0.0.1:8877",
                "_source": "--internal--",
                "enable_ipv4": true,
                "enable_ipv6": false,
                "lb_type": "round_robin",
                "name": "cluster_127_0_0_1_8877",
                "type": "strict_dns",
                "urls": [
                    "tcp://127.0.0.1:8877"
                ]
            },
            {
                "_referenced_by": [
                    "mapping-qotm.yaml.1"
                ],
                "_service": "qotm",
                "_source": "mapping-qotm.yaml.1",
                "enable_ipv4": true,
                "enable_ipv6": false,
                "lb_type": "round_robin",
                "name": "cluster_qotm",
                "type": "strict_dns",
                "urls": [
                    "tcp://qotm:80"
                ]
            }
        ],
        "filters": [
            {
                "_source": "--internal--",
                "config": {},
                "name": "cors"
            },
            {
                "_source": "--internal--",
                "config": {},
                "name": "router",
                "type": "decoder"
            }
        ],
        "listeners": [
            {
                "_source": "tls.yaml.1",
                "redirect_listener": false,
                "require_tls": false,
                "service_port": 443,
                "tls": {
                    "_source": "tls.yaml.1",
                    "cacert_chain_file": "/etc/ambassador-config/ca_cert_chain/tls.crt",
                    "cert_chain_file": "/etc/ambassador-config/certs/tls.crt",
                    "cert_required": true,
                    "private_key_file": "/etc/ambassador-config/certs/tls.key",
                    "ssl_context": true
                },
                "use_proxy_proto": false,
                "use_remote_address": true
            }
        ],
        "routes": [
            {
                "__saved": [
                    0,
                    6,
                    0,
                    "/qotm/",
                    "GET"
                ],
                "_group_id": "467077fe5e44a0ca9d4eb415fa9cd501266c3eea",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "mapping-qotm.yaml.1"
                ],
                "_source": "mapping-qotm.yaml.1",
                "clusters": [
                    {
                        "name": "cluster_qotm",
                        "weight": 100.0
                    }
                ],
                "prefix": "/qotm/",
                "prefix_rewrite": "/"
            },
            {
                "__saved": [
                    0,
                    15,
                    0,
                    "/ambassador/v0/",
                    "GET"
                ],
                "_group_id": "8de18501d2044fe30db225289b318d5fda913b64",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/",
                "prefix_rewrite": "/ambassador/v0/",
                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_alive",
                    "GET"
                ],
                "_group_id": "7df546235997704c909d473af2cbcb5e606d20de",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_alive",
                "prefix_rewrite": "/ambassador/v0/check_alive",
                "timeout_ms": 10000
            },
            {
                "__saved": [
                    0,
                    26,
                    0,
                    "/ambassador/v0/check_ready",
                    "GET"
                ],
                "_group_id": "b4db12f5b638f1750062dd4220911c4f6f44fc57",
                "_method": "GET",
                "_precedence": 0,
                "_referenced_by": [
                    "--internal--"
                ],
                "_source": "--internal--",
                "clusters": [
                    {
                        "name": "cluster_127_0_0_1_8877",
                        "weight": 100.0
                    }
                ],
                "prefix": "/ambassador/v0/check_ready",
                "prefix_rewrite": "/ambassador/v0/check_ready",
                "timeout_ms": 10000
            }
        ]
    },
    "errors": {},
    "source_map": {
        "--internal--": {
            "--internal--": true
        },
        "mapping-qotm.yaml": {
            "mapping-qotm.yaml.1": true
        },
        "tls.yaml": {
            "tls.yaml.1": true
        }
    },
    "sources": {
        "--diagnostics--": {
            "_source": "--diagnostics--",
            "description": "The '--diagnostics--' source marks objects created by Ambassador to assist with diagnostic output.",
            "filename": "--diagnostics--",
            "index": 0,
            "kind": "diagnostics",
            "name": "Ambassador Diagnostics",
            "version": "v0"
        },
        "--internal--": {
            "_source": "--internal--",
            "description": "The '--internal--' source marks objects created by Ambassador's internal logic.",
            "filename": "--internal--",
            "index": 0,
            "kind": "Internal",
            "name": "Ambassador Internals",
            "version": "v0"
        },
        "mapping-qotm.yaml.1": {
            "_source": "mapping-qotm.yaml",
            "filename": "mapping-qotm.yaml",
            "index": 1,
            "kind": "Mapping",
            "name": "qotm_mapping",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nkind: Mapping\nname: qotm_mapping\nprefix: /qotm/\nservice: qotm\n"
        },
        "tls.yaml.1": {
            "_source": "tls.yaml",
            "filename": "tls.yaml",
            "index": 1,
            "kind": "Module",
            "name": "tls",
            "version": "ambassador/v0",
            "yaml": "apiVersion: ambassador/v0\nconfig:\n  client:\n    cacert_chain_file: /etc/ambassador-config/ca_cert_chain/tls.crt\n    cert_required: true\n    enabled: True,\n  server:\n    cert_chain_file: /etc/ambassador-config/certs/tls.crt\n    enabled: true\n    private_key_file: /etc/ambassador-config/certs/tls.key\nkind: Module\nname: tls\n"
        }
    }
}
